--- a/src/main.css
+++ b/src/main.css
@@ -26,9 +26,11 @@ img {
 }
 
 .calendar {
-  max-width: 800px;
-  margin-top: 100px;
+  padding-top: 100px;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .calendar__year {
@@ -41,6 +43,8 @@ img {
   height: 10px;
   border: 1px solid #000;
   margin-right: 5px;
+  transition: all 0.3s ease-in-out;
+  will-change: background;
 }
 
 .calendar__week--filled {
