Add some styles

--- a/src/main.css
+++ b/src/main.css
@@ -9,11 +9,11 @@ html {
 }
 
 body {
-  font-family: "Source Sans Pro", "Trebuchet MS", "Lucida Grande",
-    "Bitstream Vera Sans", "Helvetica Neue", sans-serif;
+  font-family: "Catamaran", sans-serif;
   margin: 0;
   text-align: center;
   color: #293c4b;
+  font-size: 30px;
 }
 
 h1 {
@@ -48,10 +48,101 @@ img {
 }
 
 .calendar__week--filled {
-    background: lightcoral;
-    border-color: lightcoral;
+  background: lightcoral;
+  border-color: lightcoral;
 }
 
 calendar__week::last-child {
   margin-right: 0;
+}
+
+
+.dropdown {
+  font-size: 30px;
+  display: inline-block;
+  position: relative;
+  outline: none;
+  cursor: pointer;
+}
+
+.dropdown__panel {
+  z-index: 2;
+  background: white;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  visibility: hidden;
+  opacity: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-radius: 0;
+  font-size: 30px;
+  background: white;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: 0;
+  transition: opacity 0.3s linear;
+  transition: all 0.3s linear;
+  /*   font-weight: bold; */
+}
+
+.dropdown__panel::before {
+  transform: translateX(0);
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  border-left: 1px solid black;
+  transition: all 0.3s linear;
+}
+
+.dropdown__panel::after {
+  transform: translateX(0);
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  border-left: 1px solid black;
+  transition: transform 0.3s linear;
+}
+
+.dropdown__selected-text {
+  opacity: 0.3;
+}
+.dropdown__selected-text.selected {
+  opacity: 1;
+  font-weight: bold;
+}
+
+.dropdown__panel--visible {
+  visibility: visible;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  border-top: 0;
+  border-bottom: 0;
+  background: white;
+  transition: opacity 0.3s linear;
+}
+
+.dropdown__panel--visible::before {
+  transform: translateX(-20px);
+}
+.dropdown__panel--visible::after {
+  transform: translateX(20px);
+}
+
+.dropdown__item {
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.dropdown__item:hover {
+  font-weight: bold;
 }
