--- a/src/main.css
+++ b/src/main.css
@@ -9,10 +9,15 @@ html {
 }
 
 body {
-  margin: 0;
+  max-width: 900px;
+  margin: auto;
   text-align: center;
   color: #293c4b;
   font-size: 30px;
+  padding-top: 40px;
+  padding-bottom: 100px;
+  counter-reset: year;
+  line-height: 1.2;
 }
 
 body,
@@ -30,7 +35,8 @@ img {
 }
 
 .calendar {
-  padding-top: 100px;
+  padding-top: 60px;
+  padding-left: 20px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -40,20 +46,54 @@ img {
 .calendar__year {
   margin-bottom: 10px;
   display: flex;
+  position: relative;
 }
 
+.calendar__year::before {
+  position: absolute;
+  left: -20px;
+  font-size: 10px;
+  counter-increment: year;
+  content: counter(year);
+}
+
+.count-weeks {
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.count-weeks--visible {
+  opacity: 1;
+}
+  
 .calendar__week {
-  width: 10px;
-  height: 10px;
+  width: 11px;
+  height: 11px;
   border: 1px solid #2c3e50;
-  margin-right: 5px;
-  transition: all 0.3s ease-in-out;
-  will-change: background;
+  margin-right: 6px;
+  position: relative;
 }
 
 .calendar__week--filled {
-  background: lightcoral;
-  border-color: lightcoral;
+  border-color: transparent;
+}
+
+.calendar__week::after {
+  position: absolute;
+  background: #2c3e50;
+  opacity: 0;
+  width: 6px;
+  height: 6px;
+  content: " ";
+  left: 50%;
+  top: 50%;
+  /* will-change: opacity;   
+    transition: opacity 0.3s ease-in-out; */
+  transform: translate(-50%, -50%);
+}
+
+.calendar__week.calendar__week--filled::after {
+  opacity: 1;
 }
 
 calendar__week::last-child {
@@ -68,6 +108,12 @@ calendar__week::last-child {
   border-bottom: 2px solid #2c3e50;
   padding: 0;
   margin: 0;
+  position: relative;
+}
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #2c3e50;
+  opacity: 0.3; /* Firefox */
 }
 
 .input--year {
@@ -111,12 +157,11 @@ calendar__week::last-child {
   border-right: 1px solid #2c3e50; */
 }
 
-.dropdown__selected-text {
+.dropdown__title {
   opacity: 0.3;
 }
-.dropdown__selected-text.selected {
+.dropdown__title--selected {
   opacity: 1;
-  font-weight: bold;
 }
 
 .dropdown__panel--visible {
